product-reviews fixed alignment of form fields

--- a/layout/#src/widgets/product-reviews/product-reviews.scss
+++ b/layout/#src/widgets/product-reviews/product-reviews.scss
@@ -181,10 +181,21 @@
     &__form-fields {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 1rem 2rem;
+
+        @media (min-width: $mq-lg) {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
     }
 
     &__form-field {
+        flex: 0 1 100%;
+        &.half-lg {
+            @media (min-width: $mq-lg) {
+                flex: 0 1 calc(50% - 1rem);
+            }
+        }
     }
 
     &__form-stars {
